# Cpp-Library-CMake-Template

./: .gitmodules  CMakeLists.txt  README.md
MyLibrary/: CMakeLists.txt
MyLibrary/src/: Library.cpp  Library.hpp
SandboxApp/: CMakeLists.txt
SandboxApp/src/: SandboxApp.cpp
